using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace De_Friet_Tent.Models
{
    public class Owner : Employee
    {
        //public Owner(int Id, string Firstname, string Lastname, string Phonenumber, string Emailaddress, string Address, string Occupation): 
        //    base (Id, Firstname, Lastname, Phonenumber, Emailaddress, Address, Occupation)
        //{
        //    
        //}
    }
}
